--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">NINJA KEN</div>
+      <div class="header-logo">Ahmad Taufiq</div>
       <div class="header-list">
         <ul>
           <li><a href="#about-link">Tentang Saya</a></li>
@@ -60,7 +60,7 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">NINJA KEN</div>
+      <div class="footer-logo">Ahmad Taufiq</div>
       <div class="footer-list">
         <ul>
           <li><a href="#about-link">Tentang Saya</a></li>
